--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint": "^7.11.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
